<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nguyen.espresso4.activities.DateTimePickerActivity">

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_below="@id/date_picker_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_picker" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hello_world"
        android:textSize="22sp"
        android:layout_centerInParent="true" />

</RelativeLayout>
