<resources>
    <string name="app_name">Espresso4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_text">Type text</string>
    <string name="spinner_selection">Spinner selection</string>
    <string name="custom_list_adapter">Custom List Adapter</string>
    <string name="search_view">SearchView</string>
    <string name="actionbar">ActionBar</string>
    <string name="viewpager">ViewPager</string>
    <string name="dialogs">Dialogs</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="examples_of_features_tested">Examples of features tested</string>
    <string name="title_activity_enter_name">EnterNameActivity</string>
    <string name="enter_name">Enter name</string>
    <string name="next">Next</string>
    <string name="title_activity_display_name">DisplayNameActivity</string>
    <string name="mandatory">Mandatory field</string>
    <string name="title_activity_spinner_selection">SpinnerSelectionActivity</string>
    <string name="title_activity_custom_list">CustomListActivity</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="search_hint">Search books</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="no_items_found">No items found!</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
    <string name="search">Search</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="title_activity_action_bar_example">ActionBarExampleActivity</string>
    <string name="action_about">About</string>
    <string name="toogle_actionmode">Toggle ActionMode</string>
    <string name="action_mode_one">ActionMode1</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_dialog_example">DialogExampleActivity</string>
    <string name="show_confirm_dialog">Show Confirm Dialog</string>
    <string name="dialog_title">Please confirm</string>
    <string name="dialog_message">This is a very important action that you need to confirm.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_activity_help_text">Valid options: \nBerlin \nHelsinki \nParis \nSofia</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="title_activity_date_time_picker">DateTimePickerActivity</string>
    <string name="date_picker">DatePicker</string>
    <string name="time_picker">TimePicker</string>
    <string name="date_time_pickers">Date / Time Pickers</string>
</resources>
